# basekit

./: .gitignore  AGENTS.md  CLAUDE.md  ISSUEKIT.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dependency-audit.yml
docs/: README.md
docs/guides/: README.md  discovery_guide.md  docker_compose_guide.md  docker_manager_guide.md  vault_guide.md
docs/guides/config/: config_hook_guide.md
docs/guides/logging/: logging_guide.md
docs/guides/testing/: testing_guide.md
docs/issues/: README.md
docs/issues/indexes/: completed-001-099.md  completed-recent.md
docs/proposals/: README.md  _template.md
src/basekit/: __init__.py  config_hook.py  discovery.py  docker_compose.py  docker_manager.py  logging.py  vault.py
tests/: test_config_hook.py  test_discovery.py  test_docker_compose.py  test_docker_manager.py  test_logging.py  test_vault.py
