[project]
name = "basekit"
version = "0.1.0"
description = "Shared Python application foundation utilities"
authors = [{ name = "jj", email = "soft.management943@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "python-dotenv>=1.0.0,<2.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8,<10",
  "ruff>=0.15.12,<0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/basekit"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.issuekit]
worker_accept_directed = true
project = "basekit"
recent_count = 30
ascii_id_threshold = 1
issues_dir = "docs/issues"
